@@ -1,6 +1,7 @@
 2010-03-22  Werner Koch  <wk@g10code.com>
 
 	* Makefile.am (mkheader, assuan.h): Build header file.
+	(nodist_libassuan_la_SOURCES): New.  Use it for assuan.h.
 	* mkheader.c: New.
 	* assuan.h: Rename to assuan.h.in.
 
